attempting to fix a regression where the view to edit the location points to the wrong template

--- a/apollo/frontend/templates/frontend/location_edit.html
+++ b/apollo/frontend/templates/frontend/location_edit.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}
+{% extends "frontend/_layout.html" %}
 {% load apollo %}{% load i18n %}
 {% block content %}
 <form method="POST">
