--- a/apollo/frontend/templates/500.html
+++ b/apollo/frontend/templates/500.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-md-offset-4" style="text-align:center; margin-top:14em;">
-                <legend style="border-bottom:0px; margin-bottom:0px;">{{ _('Zong! We screwed up :(') }}</legend>
+                <legend style="border-bottom:0px; margin-bottom:0px;">{{ _("Zong! We screwed up :(") }}</legend>
                 <p>{{ _("You shouldn't be seeing this page but you are because you're a genius and have found a rare bug in the software. Rest assured, we now know about it and will fix it ASAP!") }}</p>
             </div>
         </div>
