--- a/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
@@ -1,4 +1,4 @@
-{% extends 'frontend/_layout.html' %}{% from 'frontend/macros/analysis_breadcrumb.html' import render_analysis_breadcrumb -%}{% from 'frontend/macros/analysis_navigation.html' import render_analysis_navigation %}
+{% extends 'frontend/_layout.html' %}{% from 'process_analysis/macros/analysis_breadcrumb.html' import render_analysis_breadcrumb -%}{% from 'process_analysis/macros/analysis_navigation.html' import render_analysis_navigation %}
 {% block content %}
 <div class="row">
 	<div class="col-md-5">
@@ -32,7 +32,7 @@
 							<th width="250">{{ _('Location') }}</th>
 							<th width="100" style="text-align:center">N</th>
 							{% for tag, tag_description, tag_stats in incidents_summary.top %}
-							<th width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=tag) }}">{{ tag }}</a></abbr></th>
+							<th width="100" style="text-align: center"><abbr title="{{ tag_description }}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=tag) }}">{{ tag }}</a></abbr></th>
 							{% endfor %}
 						</tr>
 						<tr>
@@ -74,7 +74,7 @@
 							<table width="100%" class="table table-striped table-bordered">
 								<tr>
 									<td width="30" rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><strong>{{ field.name }}</strong></td>
-									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
+									<td rowspan="{% if stats.urban %}4{% else %}2{% endif %}"><a href="{{ url_for('process_analysis.process_analysis_with_location_and_tag', form_id=form.pk, location_id=location.pk, tag=field.name) }}">{{ field.description }}</a></td>
 									<td>&nbsp;</td>
 									{% if stats.type == 'continuous' %}
 									<td bgcolor="#eee">{{ _('Mean') }}</td>
