--- a/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="col-md-7">
 		<form class="form-inline pull-right">
-			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }} {{ filter_form.status(class_='form-control span2 input-sm') }} {{ filter_form.witness(class_='form-control span2 input-sm') }}</div>
+			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }} {{ filter_form.status(class_='form-control span2 input-sm') }}</div>
 			<button class="btn btn-sm btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 		</form>
 	</div>
