--- a/apollo/frontend/templates/frontend/quality_assurance_list.html
+++ b/apollo/frontend/templates/frontend/quality_assurance_list.html
@@ -32,7 +32,7 @@
             {{ submission_header(form, form_fields, location_types, perms) }}
           </thead>
           <tbody>
-            {{ submission_items(pager.items, form, form_fields, location_types, quality_statuses, perms) }}
+            {{ submission_items(pager.items, form, form_fields, location_types, quality_statuses, verification_statuses, perms) }}
           </tbody>
         </table>
       </div>
