--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -129,8 +129,7 @@
         </div>
     </div>
     {% assets 'apollo_js' %}
-    <script type="text/javascript" src="{{ ASSET_URL }}" charset="utf-8"></script>
-    {% endassets %}
+    <script type="text/javascript" src="{{ ASSET_URL }}" charset="utf-8"></script>{% endassets %}
     {%- block scripts -%}{%- endblock -%}
     {% if not debug and ga_key %}
     <script type="text/javascript">
