bug fix preventing updates and deletions of administrative divisions

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -54,7 +54,7 @@
       </div>
       <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
-          <button type="submit" class="btn btn-primary" id="addDivisionAddButton">{{ _('Add') }}</button>
+          <button type="button" class="btn btn-primary" id="addDivisionAddButton">{{ _('Add') }}</button>
       </div>
       </form>
     </div><!-- /.modal-content -->
@@ -101,7 +101,7 @@
       <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
           <button type="button" class="btn btn-danger" id="updateDivisionDeleteButton">{{ _('Delete') }}</button>
-          <button type="submit" class="btn btn-primary" id="updateDivisionUpdateButton">{{ _('Update') }}</button>
+          <button type="button" class="btn btn-primary" id="updateDivisionUpdateButton">{{ _('Update') }}</button>
       </div>
       </form>
     </div><!-- /.modal-content -->
