--- a/apollo/static/css/custom.css
+++ b/apollo/static/css/custom.css
@@ -81,7 +81,7 @@ right: auto;
  vertical-align:middle;
  height:35px;
  top:12px;
- text-shadow: 1px 1px 2px rgba(0,0,0,0.25); 
+ text-shadow: 1px 1px 2px rgba(0,0,0,0.25);
  display: none;
 }
 .i_custom{vertical-align:middle;
@@ -497,7 +497,7 @@ transform:scale(0.7);
     display: block;
     text-align: center;
     overflow: hidden;
-    white-space: nowrap; 
+    white-space: nowrap;
     margin-top: 10px;
     margin-bottom: 16px;
 }
@@ -530,4 +530,17 @@ transform:scale(0.7);
 abbr[title] {
     border-bottom: 1px dotted;
     text-decoration: none;
+}
+
+.success {
+  color: #5cb85c;
+}
+.warning {
+  color: #f0ad4e;
+}
+.error {
+  color: #d9534f;
+}
+.neutral {
+  color: #357ebd;
 }
