--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -40,6 +40,9 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
   {%- if perms.send_messages.can() -%}
   <button class="btn btn-sm btn-success pull-right" id="send_message_modal_btn" style="margin-right:1em;"><i class="glyphicon glyphicon-envelope"></i> {{ _('Send Message') }}</button>
   {%- endif -%}
+  {%- if perms.role('admin').can() -%}
+  <button class="btn btn-sm btn-danger pull-right" id="nuke_participants_modal_btn" style="margin-right: 1em;" data-toggle="modal" data-target="#nuke_modal">Nuke participants</button>
+  {%- endif -%}
 {% endblock %}
 {% block content %}
 {%- set flash_msgs = get_flashed_messages(category_filter=['task_begun']) -%}
@@ -143,6 +146,27 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
         </div>
       </div>
     </div>
+    <div class="modal fade" id="nuke_modal" tabindex="-2" role="dialog" aria-labelledby="nukeModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="nukeModalLabel">{{ _('Nuke participants') }}</h4>
+          </div>
+          <div class="modal-body">
+            <div class="alert alert-danger"><strong>WARNING:</strong> This will delete all participants, as well as any data linked to them &ndash; checklists, incidents and messages. Only use this if you're absolutely sure this is what you want, and you accept responsibility for all data lost.</div>
+            <p>Please enter <code id="compare"></code> below to proceed:</p>
+            <div class="form-group">
+              <input class="form-control" id="prompt">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button class="btn btn-danger" disabled="true" id="confirm_nuke">Yes, I understand</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- IMPORT WIZARD -->
     <div class="wizard" id="import-wizard" data-title="Import Participants">
       <!-- Step 1 -->
@@ -205,6 +229,8 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
 <script type="text/javascript" src="{{ url_for('static', filename='js/prettify.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-wizard.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.form.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/underscore.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/URI.min.js') }}"></script>
 <script type="text/javascript">
 var wizard;
 
@@ -237,6 +263,14 @@ $(function(){
     $('#edit_modal').on('hidden.bs.modal', function(e) {
         $('#edit_modal').removeData();
         $('#edit_modal').html(edit_modal_content);
+    });
+
+    $('#nuke_modal').on('show.bs.modal', function (e) {
+      var compare = new URI(window.location.href).hostname();
+      $('#compare').html(compare);
+      $('#prompt').on('input', _.debounce(function () {
+        $('#confirm_nuke').prop('disabled', $('#prompt').val() != compare);
+      }, 500));
     });
 
     wizard = $('#import-wizard').wizard({
