--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -33,6 +33,9 @@
   {%- if perms.import_locations.can() -%}
   <button id="open-wizard" class="btn btn-sm btn-primary pull-right" style="margin-right:1em;"><i class="glyphicon glyphicon-import glyphicon-white"></i> {{ _('Import Locations') }}</button>
   {%- endif -%}
+  {%- if perms.role('admin').can() -%}
+  <button class="btn btn-sm btn-danger pull-right" id="nuke_locations_modal_btn" style="margin-right: 1em;" data-toggle="modal" data-target="#nuke_modal">Nuke locations</button>
+  {%- endif -%}
 {% endblock %}
 {% block content %}
 <div class="row-fluid">
@@ -83,6 +86,32 @@
       </tbody>
     </table>
   </div>
+  {%- if perms.role('admin').can() -%}
+  <div class="modal fade" id="nuke_modal" tabindex="-2" role="dialog" aria-labelleyby="nukeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="nukeModalLabel">{{ _('Nuke locations') }}</h4>
+        </div>
+        <div class="modal-body">
+          <div class="alert alert-danger"><strong>WARNING:</strong> This will delete all locations. This means that everything else &ndash; checklists, incidents, participants will be invalid, and also deleted. Only use this if you are absolutely sure that this is what you want, and you accept responsibility for the resulting data loss.</div>
+          <p>Please enter <code id="compare"></code> below to proceed:</p>
+          <div class="form-group">
+            <input class="form-control" id="prompt">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <form action="{{ url_for('locations.nuke_locations') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button class="btn btn-danger" disabled="true" id="confirm_nuke">Yes, I understand</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  {%- endif -%}
   <!-- IMPORT WIZARD -->
     <div class="wizard" id="import-wizard" data-title="Import Locations">
       <!-- Step 1 -->
@@ -150,6 +179,8 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-wizard.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.form.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/filters.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/underscore.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/URI.min.js') }}"></script>
 <script type="text/javascript">
 var wizard;
 
@@ -157,6 +188,16 @@ $(function(){
     $("#uploadBtn").change(function () {
         $("#uploadFile").val(this.files[0].name);
     });
+
+    {%- if perms.role('admin').can() -%}
+    $('#nuke_modal').on('show.bs.modal', function (e) {
+      var compare = new URI(window.location.href).hostname();
+      $('#compare').html(compare);
+      $('#prompt').on('input', _.debounce(function () {
+        $('#confirm_nuke').prop('disabled', $('#prompt').val() != compare);
+      }, 500));
+    });
+    {%- endif -%}
 
     wizard = $('#import-wizard').wizard({
         keyboard : true,
