--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -41,7 +41,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
   <button class="btn btn-sm btn-success pull-right" id="send_message_modal_btn" style="margin-right:1em;"><i class="glyphicon glyphicon-envelope"></i> {{ _('Send Message') }}</button>
   {%- endif -%}
   {%- if perms.role('admin').can() -%}
-  <button class="btn btn-sm btn-danger pull-right" id="nuke_participants_modal_btn" style="margin-right: 1em;" data-toggle="modal" data-target="#nuke_modal">{{ _('Purge participants') }}</button>
+  <button class="btn btn-sm btn-danger pull-right" id="nuke_participants_modal_btn" style="margin-right: 1em;" data-toggle="modal" data-target="#nuke_modal">{{ _('Purge Participants') }}</button>
   {%- endif -%}
 {% endblock %}
 {% block content %}
@@ -152,7 +152,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="nukeModalLabel">{{ _('Purge participants') }}</h4>
+            <h4 class="modal-title" id="nukeModalLabel">{{ _('Purge Participants') }}</h4>
           </div>
           <div class="modal-body">
             <div class="alert alert-danger"><strong>WARNING:</strong> This will delete all participants, as well as any data linked to them &ndash; checklists, incidents and messages. Only use this if you're absolutely sure this is what you want, and you accept responsibility for all data lost.</div>
